使用其他方法解决因为scroll-view在安卓无法竖直滑动的问题，解决连续多道填空题做题时出现用户答案错乱的bug

--- a/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
+++ b/miniprogram/pages/center/InterviewScenes/InterviewScenes.wxml
@@ -4,7 +4,7 @@
 	<view slot="backText">面试现场</view>
 </cu-custom>
 <view class="wrap">
-	<block wx:if="{{banksList.length > 0}}">
+	<block wx:if="{{banksList[0].questionsFileArry.length > 0}}">
 			<block wx:for="{{banksList}}" wx:key="parentId">
 				<block wx:if="{{item.questionsFileArry.length > 0}}">
 				<navigator url="../viewVideo/viewVideo?id={{item.parentId}}">
