--- a/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxss
+++ b/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxss
@@ -1,11 +1,39 @@
 page {
   background: white;
 }
+scroll-view {
+  height: 100%;
+}
 .bank {
   margin-left: 34rpx;
-  height: 76vh;
-  overflow: auto;
+  /* height: 76vh; */
+  /* overflow: auto; */
   padding-top: 50rpx;
+}
+.question-title {
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  padding-right: 5vw;
+  word-break: break-all;
+}
+.bank-head {
+  display: flex;
+  border-bottom: 2rpx solid rgba(187, 187, 187, 1);
+  padding: 26rpx;
+}
+.bank-head .bank-title {
+  font-size: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  text-align: left;
+  font-family: PingFangSC-regular;
+  width: 100vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 .my-choosebox radio[checked] {
   border: 4rpx solid black;
@@ -62,12 +90,12 @@ checkbox.red {
   font-family: PingFangSC-regular;
   padding-top: 100rpx;
 }
-.quetion-title {
+/* .quetion-title {
   color: rgba(16, 16, 16, 1);
   font-size: 36rpx;
   text-align: left;
   font-family: PingFangSC-regular;
-}
+} */
 
 
 
