--- a/miniprogram/pages/home/interviewAll/interviewAll.wxml
+++ b/miniprogram/pages/home/interviewAll/interviewAll.wxml
@@ -1,4 +1,4 @@
-
+	<!-- <scroll-view scroll-y scroll-top="{{topNum}}" enable-back-to-top="true"> -->
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
@@ -21,7 +21,7 @@
 			isLike: isLike
 		}
 	</wxs>
-	<view class="bank-wrap">
+	<view class="bank-wrap" id="page">
 		<view class="bank-head">
 			<view class="bank-title">
 				<text>{{bank.title}} </text>
@@ -67,8 +67,8 @@
 		</view>
 		<view class="bank">
 			<view class="radio-question">
-				<view class="quetion-title">
-					<text style="font-size: 36rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
+				<view class="question-title">
+					<text style="font-size: 32rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
 					<view wx:if="{{questionsFileArry.length > 0}}"  class="audio-play">
 						<view wx:if="{{audioPlay === 'init'}}" bindtap="play" >
 							<text class="cuIcon-notificationfill text-yellow">
@@ -91,7 +91,7 @@
 				</view>
 				<view class="correct-analyse">
 					<view wx:if="{{bank.questions[questionIndex].analyse}}">解析：\n{{bank.questions[questionIndex].analyse}}</view>
-					<view wx:if="{{bank.questions[questionIndex].refer_answer}}">参考答案：<text class="text-yellow">\n{{bank.questions[questionIndex].refer_answer}}</text></view> <br />
+					<view wx:if="{{bank.questions[questionIndex].refer_answer}}">参考答案：<text>\n{{bank.questions[questionIndex].refer_answer}}</text></view> <br />
 				</view>
 			</view>
 		</view>
@@ -132,6 +132,7 @@
 			</view> -->
 		</view>
 	</view>
+	<!-- </scroll-view> -->
 
 		<view class="next-publish">
 			<view class="pre-question chekckout-question" bindtap="handlePre">
