--- a/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
+++ b/miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml
@@ -1,6 +1,5 @@
-<!--miniprogram/pages/questionBank/answerQuestions/answerQuestions.wxml-->
+	<!-- <scroll-view scroll-y scroll-top="{{topNum}}" enable-back-to-top="true"> -->
 <cu-custom bgColor="bg-yellow" isBack="{{true}}">
-	<!-- <view slot="content">{{bank.title}}</view> -->
 	<view slot="content">笔试答题</view>
 	<view slot="backText"></view>
 </cu-custom>
@@ -17,10 +16,19 @@
 		isChecked: isChecked
 	}
 </wxs>
-<view class="bank-wrap">
+<view class="bank-wrap" id="page">
+		<view class="bank-head">
+			<view class="bank-title">
+				<text>{{bank.title}} </text>
+						<view class="score-time">
+						<text class="time">题目数量：{{bank.bank.length}}道</text>
+					</view>
+			</view>
+			
+		</view>
 	<view class="bank" wx:key="id">
 		<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
-			<view class="quetion-title">
+			<view class="question-title">
 				<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【单选】</text></text>
 			</view>
 			<view class="radio-question">
@@ -45,7 +53,7 @@
 		</block>
 		<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
 			<view class="checkbox-question">
-				<view class="quetion-title">
+				<view class="question-title">
 					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【多选】</text></text>
 				</view>
 				<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
@@ -66,7 +74,7 @@
 		</block>
 		<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
 			<view class="checkbox-question">
-				<view class="quetion-title">
+				<view class="question-title">
 					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【不定项选】</text></text>
 				</view>
 				<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
@@ -88,7 +96,7 @@
 		</block>
 		<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 			<view class="radio-question">
-				<view class="quetion-title">
+				<view class="question-title">
 					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【判断】</text></text>
 				</view>
 				<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
@@ -110,15 +118,25 @@
 		</block>
 		<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
 			<view class="blank-question">
-				<view class="quetion-title">
+				<view class="question-title">
 					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【填空】</text></text>
 				</view>
-				<view hidden="{{!ifSubmitOne}}" bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" wx:for="{{bank.bank[questionIndex].correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+				<block wx:if="{{ifSubmitOne}}">
+				<view bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" wx:for="{{bank.bank[questionIndex].correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+					<input data-index="{{key}}" data-type="{{bank.bank[questionIndex].type}}" bindinput="inputChange" placeholder="[填空{{key + 1}}]" value="{{clearValue}}"></input>
+				</view>
+				</block>
+				<block wx:else>
+				<view style="margin-top: 40rpx;font-size: 36rpx;" id="{{bank.bank[questionIndex].id}}">
+					你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
+				</view> 
+				</block>
+				<!-- <view hidden="{{!ifSubmitOne}}" bindtap="handleTap" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" wx:for="{{bank.bank[questionIndex].correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
 					<input data-index="{{key}}" data-type="{{bank.bank[questionIndex].type}}" bindinput="inputChange" placeholder="[填空{{key + 1}}]"></input>
 				</view>
 				<view hidden="{{ifSubmitOne}}" style="margin-top: 40rpx;font-size: 36rpx;" id="{{bank.bank[questionIndex].id}}">
 					你的答案: <text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}" >{{chooseValue[questionIndex]}}</text>
-				</view>
+				</view> -->
 
 				<view wx:if="{{questionModal !== 'fighter'}}" class="view-answer" bindtap="viewAnwser">
 					{{ifViewAnwser?'收起答案':'查看答案'}}
@@ -131,7 +149,7 @@
 		</block>
 		<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
 			<view class="sort-question">
-				<view class="quetion-title">
+				<view class="question-title">
 					<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【排序】</text></text>
 				</view>
 				<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
@@ -142,7 +160,7 @@
 					</block>
 				</view>
 				<view hidden="{{!ifSubmitOne}}" style="margin-top: 30rpx">
-					<input data-type="{{bank.bank[questionIndex].type}}" data-index="{{0}}" id="{{bank.bank[questionIndex].id}}" bindinput="inputChange" placeholder="[填空1]"></input>
+					<input data-type="{{bank.bank[questionIndex].type}}" data-index="{{0}}" id="{{bank.bank[questionIndex].id}}" bindinput="inputChange" placeholder="[填空1]" value="{{clearValue}}"></input>
 				</view>
 				<view hidden="{{ifSubmitOne}}" style="margin-top: 40rpx;font-size: 36rpx;">
 					你的答案:<text class="{{bank.bank[questionIndex].mistaked?'wrong-blank':'correct-blank'}}">
@@ -175,7 +193,8 @@
 	</view>
 	<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
 </block>
-<view class="next-size">
+<!-- <view class="next-size">
 	<view class="page-size">{{questionIndex + 1}}/{{bank.bank.length}}
 	</view>
-</view>
+</view> -->
+	<!-- </scroll-view> -->
