--- a/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
+++ b/miniprogram/pages/questionBank/viewQuestions/viewQuestions.wxml
@@ -1,3 +1,4 @@
+	<!-- <scroll-view scroll-y scroll-top="{{topNum}}"  enable-back-to-top="true"> -->
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
@@ -30,7 +31,7 @@
 			isLike: isLike
 		}
 	</wxs>
-	<view class="bank-wrap">
+	<view class="bank-wrap" id="page">
 		<view class="bank-head">
 			<view class="bank-title">
 				<text>{{bank.title}} </text>
@@ -71,7 +72,7 @@
 		<view class="bank" wx:key="id">
 			<block wx:if="{{bank.bank[questionIndex].type === '单选'}}">
 				<view class="radio-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【单选】</text></text>
 					</view>
 					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
@@ -92,7 +93,7 @@
 			</block>
 			<block wx:if="{{bank.bank[questionIndex].type === '多选'}}">
 				<view class="checkbox-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【多选】</text></text>
 					</view>
 					<checkbox-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="checkboxChange" class="checkbox-group">
@@ -110,7 +111,7 @@
 			</block>
 			<block wx:if="{{bank.bank[questionIndex].type === '不定项选'}}">
 				<view class="checkbox-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【不定项选】</text></text>
 					</view>
 					<checkbox-group bindchange="checkboxChange" data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" class="checkbox-group">
@@ -129,7 +130,7 @@
 			</block>
 			<block wx:if="{{bank.bank[questionIndex].type === '判断'}}">
 				<view class="radio-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【判断】</text></text>
 					</view>
 					<radio-group data-type="{{bank.bank[questionIndex].type}}" id="{{bank.bank[questionIndex].id}}" bindchange="radioChange" class="radio-group">
@@ -148,7 +149,7 @@
 			</block>
 			<block wx:if="{{bank.bank[questionIndex].type === '填空'}}">
 				<view class="blank-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【填空】</text></text>
 					</view>
 
@@ -163,7 +164,7 @@
 			</block>
 			<block wx:if="{{bank.bank[questionIndex].type === '排序'}}">
 				<view class="sort-question">
-					<view class="quetion-title">
+					<view class="question-title">
 						<text>{{bank.bank[questionIndex].id}}. {{bank.bank[questionIndex].title}}<text class="text-yellow">【排序】</text></text>
 					</view>
 					<view wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
@@ -221,6 +222,8 @@
 			</view> -->
 		</view>
 	</view>
+<!-- </scroll-view> -->
+
 	<view class="next-publish">
 		<block wx:if="{{ifViewWrong}}">
 			<view class="pre-question chekckout-question" bindtap="handlePre">
