--- a/miniprogram/pages/home/enterWritten/enterWritten.wxss
+++ b/miniprogram/pages/home/enterWritten/enterWritten.wxss
@@ -1,6 +1,6 @@
 
 .button {
-  width: 264rpx;
+  /* width: 264rpx;
   height: 76rpx;
   border-radius: 20rpx;
   background-color: rgba(250, 191, 1, 1);
@@ -11,7 +11,19 @@
   font-family: Microsoft Yahei;
   border: 4rpx solid rgba(0, 0, 0, 1);
   justify-content: center;
-  line-height: 70rpx;
+  line-height: 70rpx; */
+
+  width: 274rpx;
+  height: 100rpx;
+  line-height: 96rpx;
+  border-radius: 40rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 40rpx;
+  text-align: center;
+  box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.4);
+  font-family: Microsoft Yahei;
+  border: 2rpx solid rgba(12, 12, 12, 1);
 }
 .wrap {
   position: relative;
