--- a/miniprogram/pages/home/wrongAll/wrongAll.wxml
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxml
@@ -49,13 +49,16 @@
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
-					<view wx:if="{{wrongList.length > 0}}" class="cu-btn bg-yellow" bindtap="checkType">
+					<!-- <view wx:if="{{wrongList.length > 0}}" class="cu-btn bg-yellow" bindtap="checkType">
 						{{ifViewWrong?'完整试卷':'只看错题'}}
-					</view>
+					</view> -->
 					<view class="action" bindtap="hideModal">
 						<text class="cuIcon-close text-red" style="font-size: 48rpx;"></text>
 					</view>
 				</view>
+				<view wx:if="{{wrongList.length > 0}}" class="type-btn bg-yellow" bindtap="checkType">
+						{{ifViewWrong?'完整试卷':'只看错题'}}
+					</view>
 				<view class="question-index-wrap">
 					<block wx:if="{{ifViewWrong}}">
 						<block wx:for="{{bank.bank}}" wx:key="index">
