--- a/miniprogram/pages/home/endInterview/endInterview.wxss
+++ b/miniprogram/pages/home/endInterview/endInterview.wxss
@@ -14,7 +14,7 @@
   text-align: center;
   box-shadow: 0rpx 4rpx 8rpx 0rpx rgba(169, 169, 169, 0.4);
   border: 2rpx solid rgba(250, 191, 1, 1);
-  padding: 26rpx;
+  padding: 18rpx;
 
 }
 .video1 .audio-status {
@@ -38,12 +38,13 @@
   color: rgba(16, 16, 16, 1);
   font-size: 36rpx;
   text-align: left;
-  padding: 26rpx;
+  padding: 76rpx 40rpx;
   box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
   font-family: Arial;
   border: 2rpx solid rgba(255, 255, 255, 0);
 }
 .answer1{
+  line-height: 60rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 36rpx;
   text-align: left;
