--- a/miniprogram/pages/home/interviewAll/interviewAll.wxml
+++ b/miniprogram/pages/home/interviewAll/interviewAll.wxml
@@ -68,21 +68,18 @@
 		<view class="bank">
 			<view class="radio-question">
 				<view class="question-title">
-					<text style="font-size: 32rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
+					<text style="font-size: 38rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
 					<view wx:if="{{questionsFileArry.length > 0}}"  class="audio-play">
 						<view wx:if="{{audioPlay === 'init'}}" bindtap="play" >
 							<text class="cuIcon-notificationfill text-yellow">
 							</text>
 						</view>
 						<view wx:if="{{audioPlay === 'play'}}" bindtap="stop">
-							<text class="cuIcon-notificationfill text-yellow">
-							</text>
 							<text class="cuIcon-stop text-yellow">
 							</text>
 						</view>
 						<view wx:if="{{audioPlay === 'pause'}}" bindtap="play" >
-							<text class="cuIcon-notificationfill text-yellow">
-							</text>
+						
 							<text class="cuIcon-playfill text-yellow">
 							</text>
 						</view>
@@ -91,7 +88,7 @@
 				</view>
 				<view class="correct-analyse">
 					<view wx:if="{{bank.questions[questionIndex].analyse}}">解析：\n{{bank.questions[questionIndex].analyse}}</view>
-					<view wx:if="{{bank.questions[questionIndex].refer_answer}}">参考答案：<text>\n{{bank.questions[questionIndex].refer_answer}}</text></view> <br />
+					<view class="text-yellow" wx:if="{{bank.questions[questionIndex].refer_answer}}">参考答案：<text style="color:black">\n{{bank.questions[questionIndex].refer_answer}}</text></view> <br />
 				</view>
 			</view>
 		</view>
