--- a/miniprogram/style/bankComment.wxss
+++ b/miniprogram/style/bankComment.wxss
@@ -100,57 +100,7 @@
   text-decoration: underline;
   margin-top: 10rpx;
 }
-/* .publish {
-  position: relative;
-}
-.publish input {
-  position: absolute;
-  left: 19rpx;
-  padding-right: 193rpx;
-  padding-left: 1em;
-  width: 688rpx;
-  height: 76rpx;
-  color: rgba(136, 136, 136, 1);
-  font-size: 28rpx;
-  text-align: left;
-  font-family: PingFang SC;
-  border: 2rpx solid rgba(187, 187, 187, 1);
-}
-.publish .publish-comment {
-  position: absolute;
-  left: 530rpx;
-  top: 6rpx;
-  width: 150rpx;
-  height: 62rpx;
-  border-radius: 10rpx;
-  background-color: rgba(255, 255, 255, 1);
-  color: rgba(163, 163, 163, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(163, 163, 163, 1);
-}
 
-.chekckout-question {
-  width: 164rpx;
-  height: 72rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  font-family: PingFang SC;
-  border: 4rpx solid rgba(0, 0, 0, 1);
-  line-height: 64rpx;
-}
-.next-question {
-  float: right;
-  margin-right: 40rpx;
-}
-.pre-question {
-  float: left;
-  margin-left: 40rpx;
-} */
 .next-publish {
   position: fixed;
   left: 0px;
@@ -196,13 +146,10 @@
   line-height: 122rpx;
   font-size: 76rpx;
 }
-/* .next-publish .next-question {
- 
-} */
+
 .next-publish .pre-question {
   margin-left: 3.5vw;
 }
-
 
 .page-size {
   margin: 0 auto;
@@ -354,6 +301,11 @@ radio.red {
 }
 checkbox.red {
   border: 4rpx solid red !important;
+  background: red !important;
+}
+checkbox.yellow {
+  border: 4rpx solid #ffc200 !important;
+  background: #ffc200 !important;
 }
 .yourblank {
   font-size: 36rpx;
